@@ -33,6 +33,7 @@ import com.google.devtools.j2objc.util.PackagePrefixes;
 import com.google.devtools.j2objc.util.SourceVersion;
 import com.google.devtools.j2objc.util.Version;
 import java.io.File;
+import java.io.FileFilter;
 import java.io.IOException;
 import java.net.URL;
 import java.nio.charset.UnsupportedCharsetException;
@@ -61,7 +62,7 @@ public class Options {
   private List<String> processorPathEntries = new ArrayList<>();
   private OutputLanguageOption language = OutputLanguageOption.OBJECTIVE_C;
   private MemoryManagementOption memoryManagementOption = null;
-  private boolean emitLineDirectives = false;
+  private EmitLineDirectivesOption emitLineDirectives = EmitLineDirectivesOption.NONE;
   private boolean warningsAsErrors = false;
   private boolean deprecatedDeclarations = false;
   private HeaderMap headerMap = new HeaderMap();
@@ -80,6 +81,7 @@ public class Options {
   private String processors = null;
   private boolean disallowInheritedConstructors = true;
   private boolean nullability = false;
+  private boolean defaultNonnull = false;
   private TimingLevel timingLevel = TimingLevel.NONE;
   private boolean dumpAST = false;
   private String lintArgument = null;
@@ -91,6 +93,7 @@ public class Options {
   private String bootclasspath = null;
   private boolean emitKytheMappings = false;
   private boolean emitSourceHeaders = true;
+  private boolean injectLogSites = false;
 
   private Mappings mappings = new Mappings();
   private FileUtil fileUtil = new FileUtil();
@@ -99,7 +102,7 @@ public class Options {
   private final ExternalAnnotations externalAnnotations = new ExternalAnnotations();
   private final List<String> entryClasses = new ArrayList<>();
 
-  private SourceVersion sourceVersion = SourceVersion.defaultVersion();
+  private SourceVersion sourceVersion = null;
 
   private static File proGuardUsageFile = null;
 
@@ -195,6 +198,23 @@ public class Options {
   }
 
   /**
+   * Different ways that #line debug directives can be emitted.
+   */
+  private enum EmitLineDirectivesOption {
+    // Don't emit #line directives.
+    NONE,
+
+    // Emit #line directives using the unmodified source file path of the compilation unit; this may
+    // be an absolute path or a relative path.
+    NORMAL,
+
+    // Emit #line directives using the source file path of the compilation unit converted to a
+    // relative path, relative to the current working directory; if the file is not in a
+    // subdirectory of the current working directory then the emitted path is the same as NORMAL.
+    RELATIVE,
+  }
+
+  /**
    * Class that holds the information needed to generate combined output, so that all output goes to
    * a single, named .h/.m file set.
    */
@@ -218,10 +238,12 @@ public class Options {
   }
 
   // Flags that are directly forwarded to the javac parser.
-  private static final ImmutableSet<String> EXTRA_JAVAC_PARSER_FLAGS =
+  private static final ImmutableSet<String> PLATFORM_MODULE_SYSTEM_OPTIONS =
       ImmutableSet.of("--patch-module", "--system", "--add-reads");
-  private final List<String> extraJavacParserFlags = new ArrayList<>();
+  private final List<String> platformModuleSystemOptions = new ArrayList<>();
 
+  private static final Logger logger = Logger.getLogger("com.google.devtools.j2objc");
+  private boolean logLevelSet = false;
 
   static {
     // Load string resources.
@@ -260,11 +282,12 @@ public class Options {
    * Set all log handlers in this package with a common level.
    */
   private void setLogLevel(Level level) {
-    Logger.getLogger("com.google.devtools.j2objc").setLevel(level);
+    logger.setLevel(level);
+    logLevelSet = true;
   }
 
   public boolean isVerbose() {
-    return Logger.getLogger("com.google.devtools.j2objc").getLevel().equals(Level.FINEST);
+    return logger.getLevel().equals(Level.FINEST);
   }
 
   /**
@@ -274,8 +297,6 @@ public class Options {
    * @throws IOException
    */
   public List<String> load(String[] args) throws IOException {
-    setLogLevel(Level.WARNING);
-
     mappings.addJreMappings();
 
     // Create a temporary directory as the sourcepath's first entry, so that
@@ -284,6 +305,10 @@ public class Options {
 
     ArgProcessor processor = new ArgProcessor();
     processor.processArgs(args);
+    processor.logExpandedArgs(args);
+    if (!logLevelSet) {
+      setLogLevel(Level.WARNING);
+    }
     postProcessArgs();
 
     return processor.sourceFiles;
@@ -291,7 +316,7 @@ public class Options {
 
   private class ArgProcessor {
 
-    private List<String> sourceFiles = new ArrayList<>();
+    private final List<String> sourceFiles = new ArrayList<>();
 
     private void processArgs(String[] args) throws IOException {
       Iterator<String> iter = Arrays.asList(args).iterator();
@@ -324,11 +349,12 @@ public class Options {
       } else if (arg.startsWith("@")) {
         processArgsFile(arg.substring(1));
       } else if (arg.equals("-classpath") || arg.equals("-cp")) {
-        fileUtil.getClassPathEntries().addAll(getPathArgument(getArgValue(args, arg), true));
+        fileUtil.getClassPathEntries().addAll(getPathArgument(getArgValue(args, arg), true, true));
       } else if (arg.equals("-sourcepath")) {
-        fileUtil.getSourcePathEntries().addAll(getPathArgument(getArgValue(args, arg), false));
+        fileUtil.getSourcePathEntries()
+            .addAll(getPathArgument(getArgValue(args, arg), false, false));
       } else if (arg.equals("-processorpath")) {
-        processorPathEntries.addAll(getPathArgument(getArgValue(args, arg), true));
+        processorPathEntries.addAll(getPathArgument(getArgValue(args, arg), true, false));
       } else if (arg.equals("-d")) {
         fileUtil.setOutputDirectory(new File(getArgValue(args, arg)));
       } else if (arg.equals("--mapping")) {
@@ -366,12 +392,16 @@ public class Options {
         setGlobalCombinedOutput(getArgValue(args, arg));
       } else if (arg.equals("-XincludeGeneratedSources")) {
         headerMap.setIncludeGeneratedSources();
+      } else if (arg.equals("-Xpublic-hdrs")) {
+        fileUtil.setHeaderOutputDirectory(new File(getArgValue(args, arg)));
       } else if (arg.equals("-use-arc")) {
         checkMemoryManagementOption(MemoryManagementOption.ARC);
       } else if (arg.equals("-g")) {
-        emitLineDirectives = true;
+        emitLineDirectives = EmitLineDirectivesOption.NORMAL;
       } else if (arg.equals("-g:none")) {
-        emitLineDirectives = false;
+        emitLineDirectives = EmitLineDirectivesOption.NONE;
+      } else if (arg.equals("-g:relative")) {
+        emitLineDirectives = EmitLineDirectivesOption.RELATIVE;
       } else if (arg.equals("-Werror")) {
         warningsAsErrors = true;
       } else if (arg.equals("--generate-deprecated")) {
@@ -459,6 +489,8 @@ public class Options {
         staticAccessorMethods = true;
       } else if (arg.equals("--class-properties")) {
         setClassProperties(true);
+      } else if (arg.equals("--no-class-properties")) {
+        setClassProperties(false);
       } else if (arg.equals("--swift-friendly")) {
         setSwiftFriendly(true);
       } else if (arg.equals("-processor")) {
@@ -467,6 +499,10 @@ public class Options {
         disallowInheritedConstructors = false;
       } else if (arg.equals("--nullability")) {
         nullability = true;
+      } else if (arg.equals("--no-nullability")) {
+        nullability = false;
+      } else if (arg.equals("-Xdefault-nonnull")) {
+        defaultNonnull = true;
       } else if (arg.startsWith("-Xlint")) {
         lintArgument = arg;
       } else if (arg.equals("-Xtranslate-bootclasspath")) {
@@ -481,37 +517,31 @@ public class Options {
         emitKytheMappings = true;
       } else if (arg.equals("-Xno-source-headers")) {
         emitSourceHeaders = false;
-      } else if (arg.equals("-Xexternal-annotation-file")) {
+      } else if (arg.equals("-external-annotation-file")) {
         addExternalAnnotationFile(getArgValue(args, arg));
+      } else if (arg.equals("--reserved-names")) {
+        NameTable.addReservedNames(getArgValue(args, arg));
       } else if (arg.equals("-version")) {
         version();
       } else if (arg.startsWith("-h") || arg.equals("--help")) {
         help(false);
       } else if (arg.equals("-X")) {
         xhelp();
+      } else if (arg.equals("-XDinjectLogSites=true")) {
+        injectLogSites = true;
       }  else if (arg.equals("-source")) {
         String s = getArgValue(args, arg);
         // Handle aliasing of version numbers as supported by javac.
         try {
           sourceVersion = SourceVersion.parse(s);
-          // TODO(tball): remove when Java 9 source is supported.
-          if (sourceVersion == SourceVersion.JAVA_9) {
-            ErrorUtil.warning("Java 9 source version is not supported, using Java 8.");
-            sourceVersion = SourceVersion.JAVA_8;
-          }
-          // TODO(tball): remove when Java 10 source is supported.
-          if (sourceVersion == SourceVersion.JAVA_10) {
-            ErrorUtil.warning("Java 10 source version is not supported, using Java 8.");
-            sourceVersion = SourceVersion.JAVA_8;
-          }
         } catch (IllegalArgumentException e) {
           usage("invalid source release: " + s);
         }
       } else if (arg.equals("-target")) {
         // Dummy out passed target argument, since we don't care about target.
         getArgValue(args, arg);  // ignore
-      } else if (EXTRA_JAVAC_PARSER_FLAGS.contains(arg)) {
-        addExtraJavacParserFlags(arg, getArgValue(args, arg));
+      } else if (PLATFORM_MODULE_SYSTEM_OPTIONS.contains(arg)) {
+        addPlatformModuleSystemOptions(arg, getArgValue(args, arg));
       } else if (arg.startsWith(BATCH_PROCESSING_MAX_FLAG)) {
         // Ignore, batch processing isn't used with javac front-end.
       } else if (obsoleteFlags.contains(arg)) {
@@ -525,9 +555,26 @@ public class Options {
         sourceFiles.add(arg);
       }
     }
+
+    private void logExpandedArgs(String[] args) throws IOException {
+      StringBuilder sb = new StringBuilder();
+      for (String arg : args) {
+        if (sb.length() > 0) {
+          sb.append(' ');
+        }
+        if (arg.startsWith("@")) {
+          File f = new File(arg.substring(1));
+          sb.append(Files.asCharSource(f, fileUtil.getCharset()).read());
+        } else {
+          sb.append(arg);
+        }
+      }
+      logger.fine(sb.toString());
+    }
   }
 
   private void postProcessArgs() {
+    postProcessSourceVersion();
     // Fix up the classpath, adding the current dir if it is empty, as javac would.
     List<String> classPaths = fileUtil.getClassPathEntries();
     if (classPaths.isEmpty()) {
@@ -572,6 +619,24 @@ public class Options {
     if (bootclasspath == null) {
       // Fall back to Java 8 and earlier property.
       bootclasspath = System.getProperty("sun.boot.class.path", "");
+    }
+  }
+
+  private void postProcessSourceVersion() {
+    if (sourceVersion == null) {
+      sourceVersion = SourceVersion.defaultVersion();
+    }
+    SourceVersion maxVersion = SourceVersion.getMaxSupportedVersion();
+    if (sourceVersion.version() > maxVersion.version()) {
+      ErrorUtil.warning("Java " + sourceVersion.version() + " source version is not "
+          + "supported, using Java " + maxVersion.version() + ".");
+      sourceVersion = maxVersion;
+    }
+    if (sourceVersion.version() > 8) {
+      // Allow the modularized JRE to read the J2ObjC annotations (they are in the unnamed module).
+      addPlatformModuleSystemOptions("--add-reads", "java.base=ALL-UNNAMED");
+    } else {
+      platformModuleSystemOptions.clear();
     }
   }
 
@@ -623,7 +688,8 @@ public class Options {
     System.exit(0);
   }
 
-  private List<String> getPathArgument(String argument, boolean expandAarFiles) {
+  private List<String> getPathArgument(String argument, boolean expandAarFiles,
+      boolean expandWildcard) {
     List<String> entries = new ArrayList<>();
     for (String entry : Splitter.on(File.pathSeparatorChar).split(argument)) {
       if (entry.startsWith("~/")) {
@@ -632,6 +698,17 @@ public class Options {
         entry = System.getProperty("user.home") + entry.substring(1);
       }
       File f = new File(entry);
+      if (f.getName().equals("*") && expandWildcard) {
+        File parent = f.getParentFile() == null ? new File(".") : f.getParentFile();
+        FileFilter jarFilter = file -> file.getName().endsWith(".jar");
+        File[] files = parent.listFiles(jarFilter);
+        if (files != null) {
+          for (File jar : files) {
+            entries.add(jar.toString());
+          }
+        }
+        continue;
+      }
       if (entry.endsWith(".aar") && expandAarFiles) {
         // Extract classes.jar from Android library AAR file.
         f = fileUtil().extractClassesJarFromAarFile(f);
@@ -687,11 +764,21 @@ public class Options {
   }
 
   public boolean emitLineDirectives() {
-    return emitLineDirectives;
+    return emitLineDirectives != EmitLineDirectivesOption.NONE;
   }
 
+  @VisibleForTesting
   public void setEmitLineDirectives(boolean b) {
-    emitLineDirectives = b;
+    emitLineDirectives = b ? EmitLineDirectivesOption.NORMAL : EmitLineDirectivesOption.NONE;
+  }
+
+  public boolean emitRelativeLineDirectives() {
+    return emitLineDirectives == EmitLineDirectivesOption.RELATIVE;
+  }
+
+  @VisibleForTesting
+  public void setEmitRelativeLineDirectives() {
+    emitLineDirectives = EmitLineDirectivesOption.RELATIVE;
   }
 
   public boolean treatWarningsAsErrors() {
@@ -732,7 +819,7 @@ public class Options {
   }
 
   public List<String> getBootClasspath() {
-    return getPathArgument(bootclasspath, false);
+    return getPathArgument(bootclasspath, false, false);
   }
 
   public Mappings getMappings() {
@@ -853,6 +940,7 @@ public class Options {
   @VisibleForTesting
   public void setSourceVersion(SourceVersion version) {
     sourceVersion = version;
+    postProcessSourceVersion();
   }
 
   public boolean staticAccessorMethods() {
@@ -907,6 +995,16 @@ public class Options {
     nullability = b;
   }
 
+  public boolean defaultNonnull() {
+    return nullability && defaultNonnull;
+  }
+
+  @VisibleForTesting
+  public void setDefaultNonnull(boolean b) {
+    nullability = true;
+    defaultNonnull = b;
+  }
+
   public String lintArgument() {
     return lintArgument;
   }
@@ -954,11 +1052,6 @@ public class Options {
     externalAnnotations.addExternalAnnotationFile(file);
   }
 
-  @VisibleForTesting
-  public void addExternalAnnotationFileContents(String fileContents) throws IOException {
-    externalAnnotations.addExternalAnnotationFileContents(fileContents);
-  }
-
   // Unreleased experimental project.
   public boolean translateClassfiles() {
     return translateClassfiles;
@@ -973,11 +1066,20 @@ public class Options {
     return entryClasses;
   }
 
-  public void addExtraJavacParserFlags(String... flags) {
-    Collections.addAll(extraJavacParserFlags, flags);
+  public void addPlatformModuleSystemOptions(String... flags) {
+    Collections.addAll(platformModuleSystemOptions, flags);
   }
 
-  public List<String> getExtraJavacParserFlags() {
-    return extraJavacParserFlags;
+  public List<String> getPlatformModuleSystemOptions() {
+    return platformModuleSystemOptions;
+  }
+
+  public boolean injectLogSites() {
+    return injectLogSites;
+  }
+
+  @VisibleForTesting
+  public void setInjectLogSites(boolean b) {
+    injectLogSites = b;
   }
 }
